2008-03-13  Jim Huang  <jserv.tw@gmail.com>

	* po/zh_TW.po: Added translated item for "Show Main Window".

2008-03-09  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::m_ToggleActionEntries): Add mnemonic
	for "Show Main Window".
	* po/zh_CN.po, po/zh_TW.po: Update. Add translation for "Show Main
	Window" in zh_CN. (Need zh_TW translation)

2008-03-09  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.h, src/mainframe.cpp: Add a menu item to show/hide
	main window. Add a popup menu for tray icon.

2008-03-01  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* po/zh_CN.po,
	po/zh_TW.po,
	src/mainframe.cpp,
	src/mainframe.h: Add a hotkey and a menu item for Simple Mode.

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::entries),
	po/zh_CN.po, po/zh_TW.po:
	Fix some small problems with CMainFrame::entries (mnemonics,
	stock_ids, tooltips) and update translations.

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::entries) (ui_info): Remove duplicate
	menu items while keeping the alternative accelerators. Remove Ctrl+W
	due to conflict with BBS posting key combination.

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::MakeUI): Fix wrong mnemonic for menu
	item "Connect/Jump to/Page 10".

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.h, src/mainframe.cpp
	(CMainFrame::m_JumpMenuItems) (CMainFrame::OnJumpToPage)
	(CMainFrame::MakeUI): Fix unusable JumpToPage hotkeys(ALT+NUM) in
	full-screen mode.

2008-02-20  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.h
	(CMainFrame::OnFirstCon) (CMainFrame::OnLastCon): New member functions
	as callbacks for first/last connections.

	* src/mainframe.cpp
	(CMainFrame::entries): Improve connection operations.
	(MainFrame::OnFirstCon) (CMainFrame::OnLastCon): Likewise.
	Taken from
	http://into-wild.blogspot.com/2008/01/pcmanx-modification.html .

2008-02-16  Jim Huang  <jserv.tw@gmail.com>
